# mariadb-build-systems-simple-example-cpp

./: README.md
maria-test.bazel/: BUILD.bazel  Dockerfile  README.md  WORKSPACE  compose.yml
maria-test.clang/: Dockerfile  build.sh  compose.yml  main.cpp
maria-test.cmake/: CMakeLists.txt  Dockerfile
maria-test.gcc/: Dockerfile  build.sh
maria-test.make/: Dockerfile  Makefile
maria-test.meson/: Dockerfile  meson.build
